// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tableSection  render isHeader = false - content should render <tbody> tag match with snapshot 1`] = `
<div
  style={
    Object {
      "maxHeight": undefined,
      "minWidth": undefined,
      "width": -30,
    }
  }
>
  <div
    className="table-wrapper"
  >
    <table
      className="table"
      style={
        Object {
          "width": -49,
        }
      }
    >
      <tbody>
        <td>
          Data1
        </td>
        <td>
          Data2
        </td>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`tableSection  render isHeader = true - content should render <thead> tag match with snapshot 1`] = `
<div
  style={
    Object {
      "maxHeight": undefined,
      "minWidth": undefined,
      "width": -30,
    }
  }
>
  <div
    className="table-wrapper"
  >
    <table
      className="table"
      style={
        Object {
          "width": -49,
        }
      }
    >
      <thead>
        <th>
          Col1
        </th>
        <th>
          Col2
        </th>
      </thead>
    </table>
  </div>
</div>
`;
